fixed lg phone white space issue

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -230,7 +230,7 @@
         z-index: 222;
         display: block;
         width: 30px;
-        top: 16px;
+        top: 12px;
         position: fixed;
         left: 10px;
     }
@@ -266,7 +266,7 @@
         display: flex;
         flex-direction: row;
         position: fixed;
-        top: 58px;
+        top: 53px;
         width: 100%;
         background: rgba(0,0,0,0.7);
         height: 0px;
@@ -506,6 +506,7 @@
 @media only screen and (width:360px) and (height:567px){
     .mobile-home-container{
         width:70%;
+        padding:0;
     }
     .about-us-heading h3{
         text-indent: 54px !important;
@@ -523,6 +524,12 @@
     }
 }
 
+@media(width:360px) and (height:640px){
+     .mobile-home-container{
+       
+        padding:0;
+    }
+}
 
 /* Android Fix */
 
