--- a/css/theme.css
+++ b/css/theme.css
@@ -15,7 +15,7 @@ html, body{
 
 .header {
     width:100%;
-    height:64px;
+    height:54px;
     background:rgba(0,0,0,0.7);
     display:flex;
     position:fixed;
@@ -84,7 +84,7 @@ html, body{
     flex-basis:100%;
     padding:0 10%;
     display:flex;
-    height:64px;
+    height:54px;
     justify-content: space-between;
 }
 
